@@ -329,6 +329,7 @@ struct mosquitto {
 	unsigned int reconnect_delay;
 	unsigned int reconnect_delay_max;
 	bool reconnect_exponential_backoff;
+	uint8_t retain_available;
 	char threaded;
 	struct mosquitto__packet *out_packet_last;
 #  ifdef WITH_SRV
