@@ -15,6 +15,8 @@ Client library:
   identifier integer to the corresponding property name string.
 - Add `mosquitto_property_next()` to retrieve the next property in a list, for
   iterating over property lists.
+- mosquitto_pub now handles the MQTT v5 retain-available property by never
+  setting the retain bit.
 
 Clients:
 - Add timeout return code (27) for `mosquitto_sub -W <secs>` and
